# SmartWatch

Code/Smart_watch/: sdkconfig  sdkconfig.defaults  sdkconfig.old
Code/Smart_watch/main/: CMakeLists.txt  idf_component.yml  main.c
Code/Smart_watch/main/ui/: CMakeLists.txt  filelist.txt  lv_i18n.h  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
Code/Smart_watch/main/ui/components/: ui_comp_hook.c
Code/Smart_watch/main/ui/images/: ui_img_1718491849.c  ui_img_1726297279_195593_png.c  ui_img_543043862.c  ui_img_671965521.c  ui_img_812553787.c  ui_img_airpressure_png.c  ui_img_airpump_png.c  ui_img_bluetooth_png.c  ui_img_booth_png.c  ui_img_chenshi_png.c  ui_img_copy_png.c  ui_img_dingwei_png.c  ui_img_duoyun_png.c  ui_img_guaduan_png.c  ui_img_heart_png.c  ui_img_heartsmall_png.c  ui_img_hello_png.c  ui_img_hundred_points_color_png.c  ui_img_jieting_png.c  ui_img_kaluli_png.c  ui_img_lianjie_png.c  ui_img_lifang_png.c  ui_img_party_popper_color_png.c  ui_img_shandian_png.c  ui_img_shq2_png.c  ui_img_smiling_face_with_hearts_color_png.c  ui_img_state_png.c  ui_img_watch_png.c  ui_img_wifi_png.c  ui_img_youjian_png.c  ui_img_zuji_png.c  ui_img_zuobiao_png.c  ui_img_zzz_color_png.c
Code/Smart_watch/main/ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_Screen6.c
Code/examples/ESP-IDF-v5.3.2/01_AXP2101/: sdkconfig.defaults
Code/examples/ESP-IDF-v5.3.2/01_AXP2101/main/: CMakeLists.txt  main.cpp  port_axp2101.cpp
Code/examples/ESP-IDF-v5.3.2/02_PCF85063/: CMakeLists.txt
Code/examples/ESP-IDF-v5.3.2/02_PCF85063/main/: CMakeLists.txt  pcf85063.c
Code/examples/ESP-IDF-v5.3.2/03_QMI8658/main/: qmi8658c.cpp
Code/examples/ESP-IDF-v5.3.2/04_SD_MMC/: sdkconfig.defaults
Code/examples/ESP-IDF-v5.3.2/04_SD_MMC/main/: idf_component.yml  sd_card_example_main.c
Code/examples/ESP-IDF-v5.3.2/06_I2SCodec/: sdkconfig.defaults
Code/examples/ESP-IDF-v5.3.2/06_I2SCodec/main/: example_config.h  i2s_es8311_example.c
