SET(SOURCES screens/ui_Screen1.c
    screens/ui_Screen2.c
    screens/ui_Screen3.c
    screens/ui_Screen4.c
    screens/ui_Screen5.c
    screens/ui_Screen6.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_zuji_png.c
    images/ui_img_shandian_png.c
    images/ui_img_kaluli_png.c
    images/ui_img_heartsmall_png.c
    images/ui_img_duoyun_png.c
    images/ui_img_heart_png.c
    images/ui_img_shq2_png.c
    images/ui_img_812553787.c
    images/ui_img_airpump_png.c
    images/ui_img_airpressure_png.c
    images/ui_img_zuobiao_png.c
    images/ui_img_lifang_png.c
    images/ui_img_copy_png.c
    images/ui_img_state_png.c
    images/ui_img_booth_png.c
    images/ui_img_wifi_png.c
    images/ui_img_bluetooth_png.c
    images/ui_img_543043862.c
    images/ui_img_1726297279_195593_png.c
    images/ui_img_guaduan_png.c
    images/ui_img_jieting_png.c
    images/ui_img_1718491849.c
    images/ui_img_youjian_png.c
    images/ui_img_chenshi_png.c
    images/ui_img_dingwei_png.c
    images/ui_img_671965521.c
    images/ui_img_zzz_color_png.c
    images/ui_img_smiling_face_with_hearts_color_png.c
    images/ui_img_hello_png.c
    images/ui_img_party_popper_color_png.c
    images/ui_img_hundred_points_color_png.c
    images/ui_img_lianjie_png.c)

add_library(ui ${SOURCES})
